@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.9 2004/10/18 11:36:23 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.10 2004/10/19 11:04:26 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -37,6 +37,8 @@ Exim version 4.44
     controls (e.g. 4.43/32), the checks on when to allow different forms of
     "control" were broken. There should now be diagnostics for all cases when a
     control that does not make sense is encountered.
+
+ 9. Added the /retain_sender option to "control=submission".
 
 
 Exim version 4.43
